# chromatic

./: .gitattributes  .gitignore  README.md  pyproject.toml  requirements.txt
.github/workflows/: publish.yml  release.yml  tag-to-release.yml
chromatic/: __init__.py  __init__.pyi  __main__.py  _typing.py  data.py  demo.py  util.py
chromatic/_testing/: test_color_str.py
chromatic/ansi/: __init__.py  _colorconv.py  core.py  core.pyi  palette.py  palette.pyi
chromatic/ascii/: __init__.py  _array.py  _curses.py  _glyph_proc.py
chromatic/color/: __init__.py  __init__.pyi  colorconv.py  core.py  core.pyi  iterators.py  palette.py  palette.pyi
chromatic/data/: __init__.py  __init__.pyi  _fetchers.py  userfont.py  userfont.pyi  userfont.schema.json
chromatic/image/: __init__.py  __init__.pyi  _array.py  _curses.py  _glyph.py  _glyph_proc.py
logo/: logo.ANS
tests/: test_color_str.py
