[build-system]
requires = ["setuptools", "setuptools_scm"]
build-backend = "setuptools.build_meta"

[project]
name = "chromatic-python"
dynamic = ["version"]
description = "ANSI art image processing and colored terminal text"
readme = "README.md"
requires-python = ">=3.12"
keywords = ["ansi", "ascii", "art", "font", "image", "terminal", "parser"]
authors = [{ name = "crypt0lith" }]
license = "MIT"
classifiers = [
    "Programming Language :: Python :: 3.12",
    "Operating System :: OS Independent",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
]
dependencies = [
    "numpy>=1.25.2,<2.6",
    "pillow>=10.1,!=11.2.*,<12.0",
    "networkx>=3.0,<4.0",
    "scipy>=1.11.4,<2.0",
    "opencv-python",
    "scikit-image",
    "scikit-learn",
    "fonttools",
    "lazy_loader",
]

[project.urls]
repository = "https://github.com/crypt0lith/chromatic.git"

[tool.setuptools_scm]
write_to = "chromatic/_version.py"

[tool.setuptools.packages.find]
where = ["."]
include = ["chromatic*"]

[tool.setuptools.package-data]
chromatic = ["data/fonts/*", "data/images/*"]

[tool.black]
preview = true
skip-magic-trailing-comma = true
skip-string-normalization = true
target-version = ["py313"]
